--- a/app/assets/stylesheets/components/splash.scss
+++ b/app/assets/stylesheets/components/splash.scss
@@ -2,6 +2,7 @@
 @import './base/fonts.scss';
 
 .splash {
+  width: 80%;
   min-width: 600px;
   height: 800px;
   position: relative;
@@ -10,6 +11,11 @@
   margin: 0 auto;
   margin-top: 20px;
   z-index: 20;
+
+  img {
+    max-height: 800px !important;
+    max-width: 1000px !important;
+  }
 }
 .cb-slideshow,
 .cb-slideshow:after {
@@ -45,7 +51,7 @@
 .cb-slideshow li div {
     z-index: 50;
     position: absolute;
-    bottom: 50%;
+    bottom: 30%;
     left: 0px;
     width: 100%;
     text-align: center;
@@ -59,8 +65,9 @@
 .cb-slideshow li div h3 {
     position: relative;
     top: 20px;
+    margin: 0 auto;
     font-family: $handwritten;
-    font-size: 60px;
+    font-size: 48px;
     max-width: 800px;
     padding: 0;
     line-height: 200px;
@@ -99,7 +106,7 @@
     animation-delay: 18s;
 }
 .cb-slideshow li:nth-child(5) span {
-    background-image: url("https://res.cloudinary.com/youth-work-hub/image/upload/v1487895472/kitchen-help_wdh3yq.jpg");
+    background-image: url("https://res.cloudinary.com/youth-work-hub/image/upload/c_scale,w_962/v1487895472/kitchen-help_wdh3yq.jpg");
     -webkit-animation-delay: 24s;
     -moz-animation-delay: 24s;
     -o-animation-delay: 24s;
@@ -254,7 +261,7 @@
 @-webkit-keyframes titleAnimation {
 	0% {
 	    opacity: 0;
-	    -webkit-transform: translateY(200px);
+	    -webkit-transform: translateY(150px);
 	}
 	8% {
 	    opacity: 1;
@@ -267,14 +274,14 @@
 	19% { opacity: 0 }
 	25% {
 	    opacity: 0;
-	    -webkit-transform: scale(5);
+	    -webkit-transform: scale(4);
 	}
 	100% { opacity: 0 }
 }
 @-moz-keyframes titleAnimation {
 	0% {
 	    opacity: 0;
-	    -moz-transform: translateY(200px);
+	    -moz-transform: translateY(150px);
 	}
 	8% {
 	    opacity: 1;
@@ -287,14 +294,14 @@
 	19% { opacity: 0 }
 	25% {
 	    opacity: 0;
-	    -moz-transform: scale(5);
+	    -moz-transform: scale(4);
 	}
 	100% { opacity: 0 }
 }
 @-o-keyframes titleAnimation {
 	0% {
 	    opacity: 0;
-	    -o-transform: translateY(200px);
+	    -o-transform: translateY(150px);
 	}
 	8% {
 	    opacity: 1;
@@ -307,14 +314,14 @@
 	19% { opacity: 0 }
 	25% {
 	    opacity: 0;
-	    -o-transform: scale(5);
+	    -o-transform: scale(4);
 	}
 	100% { opacity: 0 }
 }
 @-ms-keyframes titleAnimation {
 	0% {
 	    opacity: 0;
-	    -ms-transform: translateY(200px);
+	    -ms-transform: translateY(150px);
 	}
 	8% {
 	    opacity: 1;
@@ -327,14 +334,14 @@
 	19% { opacity: 0 }
 	25% {
 	    opacity: 0;
-	    -webkit-transform: scale(5);
+	    -webkit-transform: scale(4);
 	}
 	100% { opacity: 0 }
 }
 @keyframes titleAnimation {
 	0% {
 	    opacity: 0;
-	    transform: translateY(200px);
+	    transform: translateY(150px);
 	}
 	8% {
 	    opacity: 1;
@@ -347,7 +354,7 @@
 	19% { opacity: 0 }
 	25% {
 	    opacity: 0;
-	    transform: scale(5);
+	    transform: scale(4);
 	}
 	100% { opacity: 0 }
 }
@@ -356,8 +363,8 @@
 	opacity: 1;
 }
 @media screen and (max-width: 1140px) {
-	.cb-slideshow li div h3 { font-size: 100px }
+	.cb-slideshow li div h3 { font-size: 64px }
 }
 @media screen and (max-width: 600px) {
-	.cb-slideshow li div h3 { font-size: 50px }
+	.cb-slideshow li div h3 { font-size: 40px }
 }
